# ARCHON

./: .dockerignore  .gitignore  Dockerfile  README.md  agents.md  alembic.ini  cursor_help.txt  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  scratch_resolver.py  scratch_ts.py
.github/workflows/: ci.yml
docs/adr/: ADR-001-parser-and-graph-first.md  ADR-002-architecture-rules-as-source-of-truth.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  MarketingSite.tsx  NotFoundPage.tsx  api.ts  styles.css
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_nullable_snapshot_id.py
scripts/: run_benchmarks.py
src/agents/: architecture_agent.py  debt_agent.py  impact_agent.py  llm_provider.py  maintainability_agent.py  parsing.py  remediation_agent.py  schemas.py  state.py  synthesis_agent.py  workflow.py
src/analysis/: debt_forecaster.py
src/api/: agents.py  analysis.py  app.py  auth.py  graph.py  oauth.py  repositories.py  schemas.py  security.py  webhooks.py
src/architecture/: drift_engine.py  rules.py
src/benchmarks/: runner.py  target_repos.py
src/cli/: main.py
src/core/: config.py  secrets.py
src/db/: models.py  session.py
src/environment/: ingestion.py
src/graph/: builder.py  traverser.py
src/memory/: interfaces.py  pipeline.py  providers.py  vector_store.py
src/observability/: decorators.py  telemetry.py
src/remediation/: __init__.py  engine.py  patches.py
src/retrieval/: engine.py  (+2 more)
(+85 files in other folders)
