[project]
name = "archon"
version = "0.1.0"
description = "Repository intelligence and AI Staff Engineer platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "fakeredis>=2.36.2",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "langgraph>=1.2.5",
    "networkx>=3.6.1",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "uvicorn>=0.49.0",
]

[project.scripts]
archon-api = "main:main"
archon-worker = "src.worker.main:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.14.8",
    "types-aiofiles>=25.1.0.20260518",
    "types-networkx>=3.6.1.20260612",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests", "scripts"]
exclude = ["tests/fixtures", "frontend/node_modules"]

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_configs = true
